# youbot

./: .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  MemGPT-Functions.code-workspace  PRD.md  README.md  app.yaml  build.sh  cli.sh  data.txt  docker-compose.yml  gunicorn_config.py  justfile  nx.html  pyproject.toml  pyrightconfig.json  requirements.txt  test.py  youbot.wsgi
.devcontainer/: devcontainer.json
.do/: app.yml
api/: .gitignore
client/: discord_tombot.py
config/: agents.yaml  memgpt_config  memgpt_config.yaml  memgpt_config_backup.yaml
conversable/: conversable.py  test.py
demos/: conversable.py  delegates.py  delegates_demo.py  demo_manager.py  github_expert.sh  gmail.py  google_calendar.py  graph.py  gsheets_demo.py  lists.py
docs/: IMPLEMENTATION_PLAN.md  MODULES.md  PRD.md  PRD_V2.md  acceptance.md  architecture.md  config.md  flow.excalidraw  flow_pseudocode.md  interfaces.md  milestones.md  state_layout.md  user_stories.md
docs/adrs/: 001-session-model.md  002-repo-integration-contract.md  003-youbot-owned-adapters.md  004-configurable-coding-agent-backend.md  005-backend-native-session-continuation.md  006-module-boundaries-for-controller-and-tui.md  (+1 more)
functions/: compressors.py
humans/: agent.txt  tombedor.txt
loaders/: repo_examiner.py
meta_functions/: README.md  meta_functions.py
personas/: designer.txt  github_repo_expert.txt  tester.txt
postgres/: Dockerfile
presets/: debugger.yaml
script/: clone_db_to_local_db.sh  clone_db_to_test_db.sh  configure_memgpt.py  db_ssh_tunnel.py  deploy_digital_ocean_functions.sh  dev_container_setup.sh  fetch_chat_logs.sh  gunicorn.py  install.py  lint_and_test.sh  msgs_by_user.sql  onboard_user.py  refresh_cli.py  reload_functions.py  reset_memgpt_upstream.sh  run_api_local.sh  run_docker_db.sh  run_docker_test_db.sh  run_function_handler.sh  runit.sh  tail_logs.sh  update.py  update_deps.sh
scripts/: check_sizes.py
tests/: __init__.py  conftest.py  test_api.py  test_celery_worker.py  test_project_registry.py  test_session_manager.py  test_store.py  test_task_repository.py  test_tui.py  test_usage_review.py  test_worker.py
web/: index.html
youbot/: __init__.py  adapter_change.py  adapter_defaults.py  adapter_generation.py  adapters.py  agent_manager.py  api.py  app.py  cli.py  coding_agent_activity.py  coding_agent_backend.py  coding_agent_logs.py  coding_agent_process.py  coding_agent_runner.py  coding_agent_sessions.py  config.py  controller.py  conversation_store.py  data_models.py  debugger_cli.py  executor.py  json_decoder.py  justfile_parser.py  memgpt_client.py  memory.py  messenger.py  models.py  oath_util.py  onboard_user.py  openai_chat.py  openai_tools.py  prompts.py  registry.py  repo_view.py  router.py  routing_rules.py  scaffold.py  scheduler.py  store.py  system_context.py  (+6 more)
youbot/agents/: logs.py  (+6 more)
(+199 files in other folders)
