[tool.poetry]
name = "youbot"
version = "0.0.3"
description = ""
authors = ["Tom Bedor <tombedor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
pymemgpt = {git = 'https://github.com/tombedor/MemGPT.git', rev='6d025af4e698ae761e56f8c2e76057650615c882'}
sqlalchemy = "^2.0.29"
celery = {extras = ["redis"], version = "^5.4.0"}
flask = "^3.0.2"
twilio = "^9.0.3"
gunicorn = "^21.2.0"
pyyaml = "^6.0.1"
questionary = "^2.0.1"
requests = "^2.32.2"
python-redis-cache = "^3.2.0"
tiktoken = "^0.7.0"
cryptography = "^42.0.7"
gcsa = "^2.3.0"
gspread = "^6.1.2"

# technically only needed for CLI, but adding as prod dep for now.
python-dotenv = "^1.0.1"
colorama = "^0.4.6"
rich = "^13.7.1"
toolz = "^0.12.1"

[tool.pyright]
include = [
    "youbot/**/*.py",
    "tests/**/*.py"
]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "dist",
    "build"
]
pythonVersion = "3.11"
verboseOutput = true
reportImportCycles = true
reportUnusedImport = true

[tool.black]
line-length = 140
target-version = ['py310', 'py311']

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
autoflake = "^2.3.0"
pyright = "^1.1.350"
pytest = "^8.1.1"
fawltydeps = "^0.15.0"
typer = ">=0.3.0,<0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
