[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youbot"
version = "0.1.0"
description = "Repo-first conversational TUI orchestrator"
readme = "docs/PRD.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.61.0",
  "rich>=13.7.0",
]

[project.scripts]
youbot = "youbot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["youbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

